feat: Implement cycodgr - GitHub Repository and Code Search CLI (Phases A-E Complete) (#81)
* Add cycodgh project README - GitHub search CLI design doc

- Define goal: search GitHub repos and optionally clone them
- Follow cycodmd patterns for structure and command-line parsing
- Initial scope: search verb only
- Output URLs similar to cycodmd web search
- Hydration (cloning) with configurable max limits (default 3-5)
- Recommend starting with GH CLI, can migrate to API later
- Document command structure, options, settings integration
- Success criteria and future considerations outlined

* Implement cycodgh - GitHub repository search and clone CLI

Features implemented:
- Search GitHub repositories by keywords
- Search code within specific file types (e.g., .csproj files)
- Output repository URLs (like cycodmd web search)
- Clone repositories to local directory (default: ./external)
- Configurable max results and max clones
- Filter by programming language
- Sort by stars, forks, or updated date
- Optional include forks
- Future support for git submodules (--as-submodules flag)

Implementation details:
- Uses GitHub CLI (gh) for search and authentication
- Follows cycodmd patterns for command-line parsing
- Reuses common infrastructure from cycod ecosystem
- Clean separation: SearchCommand, GitHubSearchHelpers
- Comprehensive help system

Testing verified:
û Basic repo search works
û Code search in .csproj files works
û Clone functionality works (tested with multiple repos)
û Max limits work correctly
û Default 'external' directory creation
û Example: Search for 'Microsoft.Extensions.AI' in csproj files

Example usage:
  cycodgh dotnet cli --max-results 5
  cycodgh Microsoft.Extensions.AI --in-files csproj --max-results 10
  cycodgh machine-learning --language python --clone --max-clone 3

* Add implementation summary for cycodgh

Document successful implementation with:
- All features working end-to-end
- Comprehensive testing results
- Usage examples and patterns

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,8 +28,6 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0  # Fetch all history for proper version determination
     
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
@@ -74,11 +72,18 @@ jobs:
     
     - name: Run cycodt tests
       run: |
-        export PATH=$PATH:$(pwd)/src/cycod/bin/Release/net9.0:$(pwd)/src/cycodt/bin/Release/net9.0:$(pwd)/src/cycodmd/bin/Release/net9.0
+        export PATH=$PATH:$(pwd)/src/cycod/bin/Release/net9.0:$(pwd)/src/cycodt/bin/Release/net9.0:$(pwd)/src/cycodmd/bin/Release/net9.0:$(pwd)/src/cycodgr/bin/Release/net9.0
         which cycod
         which cycodmd
+        which cycodgr
         which cycodt
         cycodt run --output-file ./TestResults/test-results-cycodt.trx
+    
+    - name: Clean up inception test TRX files
+      run: |
+        # Remove TRX files created by inception tests to avoid interference with CI reporting
+        rm -f tests/cycodt-yaml/inception-layer-1/*.trx
+        echo "Cleaned up inception test TRX files"
     
     - name: Upload test results
       uses: actions/upload-artifact@v4
@@ -104,7 +109,7 @@ jobs:
     - name: Upload NuGet packages and checksums
       uses: actions/upload-artifact@v4
       with:
-        name: cycod-cycodt-cycodmd-nuget-packages
+        name: cycod-cycodt-cycodmd-cycodgr-nuget-packages
         path: nuget-packages/*
     
     - name: Build self-contained executables
@@ -152,6 +157,9 @@ jobs:
             - cycodmd-win-x64-${{ env.VERSION }}.zip
             - cycodmd-linux-x64-${{ env.VERSION }}.zip
             - cycodmd-osx-x64-${{ env.VERSION }}.zip
+            - cycodgr-win-x64-${{ env.VERSION }}.zip
+            - cycodgr-linux-x64-${{ env.VERSION }}.zip
+            - cycodgr-osx-x64-${{ env.VERSION }}.zip
 
           - Platform packages (all tools):
             - cycodev-tools-win-x64-${{ env.VERSION }}.zip
