--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ tests/cycodt-yaml/inception-layer-1/test-results-simple.trx
 tests/cycodt-yaml/inception-layer-1/test-results-simple?.trx
 *.log
 .vscode/settings.json
+
+# Test cloned repos
+temp/external/
+temp/test-repos/
+src/cycodgr/bin/
+src/cycodgr/obj/
