--- a/src/cycodgr/cycodgr.csproj
+++ b/src/cycodgr/cycodgr.csproj
@@ -15,7 +15,7 @@
     <RuntimeIdentifiers>win-x64;linux-x64;osx-x64</RuntimeIdentifiers>
     
     <!-- NuGet Package Properties -->
-    <PackageId>CycoGr</PackageId>
+    <PackageId>CycoDgr</PackageId>
     <Authors>Rob Chambers</Authors>
     <Description>GitHub repository and code search CLI tool - dig for repos and code on GitHub</Description>
     <PackageTags>cli;github;search;code-search;repository-search;git;gh</PackageTags>
