--- a/tests/cycod-yaml/file-replacement-functions.yaml
+++ b/tests/cycod-yaml/file-replacement-functions.yaml
@@ -3,7 +3,7 @@ tests:
   - name: ReplaceFileContent with correct line count succeeds
     steps:
     - name: Run test
-      run: |
+      bash: |
         echo "line 1
         line 2
         line 3" > test-replace-content.txt
@@ -16,13 +16,13 @@ tests:
         Replaced content.*3 lines.*1 lines
       timeout: 30000
     - name: Cleanup
-      run: rm -f test-replace-content.txt
+      bash: rm -f test-replace-content.txt
     optional: needsAI
 
   - name: ReplaceFileContent with wrong line count fails
     steps:
     - name: Run test
-      run: |
+      bash: |
         echo "line 1
         line 2
         line 3" > test-replace-fail.txt
@@ -33,11 +33,11 @@ tests:
         Line count mismatch.*you specified 5 but file has 3 lines
       timeout: 30000
     - name: Cleanup
-      run: rm -f test-replace-fail.txt
+      bash: rm -f test-replace-fail.txt
     optional: needsAI
 
   - name: ReplaceFileContent on non-existent file fails
-    run: |
+    bash: |
       cycod --input "use ReplaceFileContent to replace nonexistent-file.txt with 'content', say it has 1 line" --auto-approve '*'
     expect-regex: |
       assistant-function: ReplaceFileContent
@@ -48,7 +48,7 @@ tests:
   - name: ReplaceFileContent can be undone
     steps:
     - name: Run test
-      run: |
+      bash: |
         echo "original content" > test-undo-replace.txt
         cycod --input "First use ReplaceFileContent to replace test-undo-replace.txt with 'new content', it has 1 line. Then use UndoEdit to revert it." --auto-approve '*'
       expect-regex: |
@@ -58,14 +58,14 @@ tests:
         Reverted last edit
       timeout: 45000
     - name: Cleanup
-      run: rm -f test-undo-replace.txt
+      bash: rm -f test-undo-replace.txt
     optional: needsAI
 
   # ReplaceMultipleInFile tests
   - name: ReplaceMultipleInFile replaces multiple patterns atomically
     steps:
     - name: Run test
-      run: |
+      bash: |
         echo "foo bar baz" > test-multi-replace.txt
         cycod --input "use ReplaceMultipleInFile on test-multi-replace.txt to replace 'foo' with 'FOO' and 'bar' with 'BAR'" --auto-approve '*'
       expect-regex: |
@@ -76,13 +76,13 @@ tests:
         replaced 2 occurrences
       timeout: 30000
     - name: Cleanup
-      run: rm -f test-multi-replace.txt
+      bash: rm -f test-multi-replace.txt
     optional: needsAI
 
   - name: ReplaceMultipleInFile fails if pattern not found
     steps:
     - name: Run test
-      run: |
+      bash: |
         echo "foo bar" > test-multi-fail.txt
         cycod --input "use ReplaceMultipleInFile on test-multi-fail.txt to replace 'foo' with 'FOO' and 'baz' with 'BAZ' (baz doesn't exist)" --auto-approve '*'
       expect-regex: |
@@ -91,13 +91,13 @@ tests:
         No changes made
       timeout: 30000
     - name: Cleanup
-      run: rm -f test-multi-fail.txt
+      bash: rm -f test-multi-fail.txt
     optional: needsAI
 
   - name: ReplaceMultipleInFile fails if array lengths don't match
     steps:
     - name: Run test
-      run: |
+      bash: |
         echo "foo bar baz" > test-array-length.txt
         cycod --input "use ReplaceMultipleInFile on test-array-length.txt with oldStrings=['foo','bar'] but newStrings=['FOO'] (mismatched lengths)" --auto-approve '*'
       expect-regex: |
@@ -105,13 +105,13 @@ tests:
         array length.*must match
       timeout: 30000
     - name: Cleanup
-      run: rm -f test-array-length.txt
+      bash: rm -f test-array-length.txt
     optional: needsAI
 
   - name: ReplaceMultipleInFile handles string arrays correctly
     steps:
     - name: Run test
-      run: |
+      bash: |
         echo "alpha beta gamma delta" > test-string-array.txt
         cycod --input "use ReplaceMultipleInFile on test-string-array.txt to replace ['alpha', 'beta', 'gamma'] with ['ALPHA', 'BETA', 'GAMMA']" --auto-approve '*'
       expect-regex: |
@@ -119,13 +119,13 @@ tests:
         replaced 3 occurrences
       timeout: 30000
     - name: Cleanup
-      run: rm -f test-string-array.txt
+      bash: rm -f test-string-array.txt
     optional: needsAI
 
   - name: ReplaceMultipleInFile can be undone
     steps:
     - name: Run test
-      run: |
+      bash: |
         echo "foo bar baz" > test-multi-undo.txt
         cycod --input "First use ReplaceMultipleInFile on test-multi-undo.txt to replace 'foo' with 'FOO' and 'bar' with 'BAR'. Then use UndoEdit to revert." --auto-approve '*'
       expect-regex: |
@@ -135,13 +135,13 @@ tests:
         Reverted last edit
       timeout: 45000
     - name: Cleanup
-      run: rm -f test-multi-undo.txt
+      bash: rm -f test-multi-undo.txt
     optional: needsAI
 
   - name: ReplaceMultipleInFile validates uniqueness of patterns
     steps:
     - name: Run test
-      run: |
+      bash: |
         echo "test test test" > test-unique.txt
         cycod --input "use ReplaceMultipleInFile on test-unique.txt to replace 'test' with 'TEST' (but 'test' appears multiple times, so should fail)" --auto-approve '*'
       expect-regex: |
@@ -150,5 +150,5 @@ tests:
         No changes made
       timeout: 30000
     - name: Cleanup
-      run: rm -f test-unique.txt
+      bash: rm -f test-unique.txt
     optional: needsAI
