Fix line count: use printf instead of echo to avoid trailing newline

--- a/tests/cycod-yaml/file-replacement-functions.yaml
+++ b/tests/cycod-yaml/file-replacement-functions.yaml
@@ -4,7 +4,7 @@ tests:
     steps:
     - name: Run test
       bash: |
-        echo -e 'line 1\nline 2\nline 3' > test-replace-content.txt
+        printf 'line 1\nline 2\nline 3' > test-replace-content.txt
         cycod --input "use ReplaceFileContent to replace test-replace-content.txt with 'new content', it has 3 lines" --auto-approve '*'
       expect-regex: |
         assistant-function: ReplaceFileContent
@@ -21,7 +21,7 @@ tests:
     steps:
     - name: Run test
       bash: |
-        echo -e 'line 1\nline 2\nline 3' > test-replace-fail.txt
+        printf 'line 1\nline 2\nline 3' > test-replace-fail.txt
         cycod --input "use ReplaceFileContent to replace test-replace-fail.txt with 'new', say it has 5 lines (which is wrong)" --auto-approve '*'
       expect-regex: |
         assistant-function: ReplaceFileContent
