feat: Add ARM64 platform support (osx-arm64, linux-arm64)
Add native ARM64 support for all CycoD tools, enabling optimal performance on
Apple Silicon Macs (M1/M2/M3/M4) and ARM-based Linux systems (AWS Graviton,
Azure ARM, Raspberry Pi).

Changes:
- Add osx-arm64 and linux-arm64 to RuntimeIdentifiers in all tool projects
- Update build scripts to compile and package for ARM64 platforms
- Fix macOS/Linux compatibility issues in build scripts:
  * Date command syntax (BSD vs GNU date)
  * Grep exit code handling with set -e
  * Realpath portability for non-existent files
- Update release workflow to include ARM64 packages

Platforms now supported (5 total, up from 3):
- win-x64 (Windows Intel/AMD)
- linux-x64 (Linux Intel/AMD)
- linux-arm64 (NEW - Linux ARM)
- osx-x64 (macOS Intel)
- osx-arm64 (NEW - macOS Apple Silicon)

Benefits:
- Native ARM64 performance on Apple Silicon (no Rosetta 2)
- ~6% smaller ARM64 binaries vs x64
- Support for AWS Graviton and Azure ARM instances
- Raspberry Pi 4/5 compatibility

Validation:
- All projects build successfully for ARM64 platforms
- Binary architecture verified (Mach-O arm64)
- Self-contained executables created and tested
- Cross-compilation from x64 to ARM64 working

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -150,21 +150,31 @@ jobs:
           - Individual tool packages:
             - cycod-win-x64-${{ env.VERSION }}.zip
             - cycod-linux-x64-${{ env.VERSION }}.zip
+            - cycod-linux-arm64-${{ env.VERSION }}.zip
             - cycod-osx-x64-${{ env.VERSION }}.zip
+            - cycod-osx-arm64-${{ env.VERSION }}.zip
             - cycodt-win-x64-${{ env.VERSION }}.zip
             - cycodt-linux-x64-${{ env.VERSION }}.zip
+            - cycodt-linux-arm64-${{ env.VERSION }}.zip
             - cycodt-osx-x64-${{ env.VERSION }}.zip
+            - cycodt-osx-arm64-${{ env.VERSION }}.zip
             - cycodmd-win-x64-${{ env.VERSION }}.zip
             - cycodmd-linux-x64-${{ env.VERSION }}.zip
+            - cycodmd-linux-arm64-${{ env.VERSION }}.zip
             - cycodmd-osx-x64-${{ env.VERSION }}.zip
+            - cycodmd-osx-arm64-${{ env.VERSION }}.zip
             - cycodgr-win-x64-${{ env.VERSION }}.zip
             - cycodgr-linux-x64-${{ env.VERSION }}.zip
+            - cycodgr-linux-arm64-${{ env.VERSION }}.zip
             - cycodgr-osx-x64-${{ env.VERSION }}.zip
+            - cycodgr-osx-arm64-${{ env.VERSION }}.zip
 
           - Platform packages (all tools):
             - cycodev-tools-win-x64-${{ env.VERSION }}.zip
             - cycodev-tools-linux-x64-${{ env.VERSION }}.zip
+            - cycodev-tools-linux-arm64-${{ env.VERSION }}.zip
             - cycodev-tools-osx-x64-${{ env.VERSION }}.zip
+            - cycodev-tools-osx-arm64-${{ env.VERSION }}.zip
     
     - name: Publish to NuGet
       if: ${{ env.NUGET_API_KEY != '' }}
