--- a/src/cycodt/cycodt.csproj
+++ b/src/cycodt/cycodt.csproj
@@ -11,7 +11,7 @@
     <OutputType>Exe</OutputType>
     
     <!-- Cross-platform support -->
-    <RuntimeIdentifiers>win-x64;linux-x64;osx-x64</RuntimeIdentifiers>
+    <RuntimeIdentifiers>win-x64;linux-x64;linux-arm64;osx-x64;osx-arm64</RuntimeIdentifiers>
     
     <!-- NuGet Package Properties -->
     <PackageId>CycoDt</PackageId>
