--- a/src/cycodgr/cycodgr.csproj
+++ b/src/cycodgr/cycodgr.csproj
@@ -12,7 +12,7 @@
     <OutputType>Exe</OutputType>
     
     <!-- Cross-platform support -->
-    <RuntimeIdentifiers>win-x64;linux-x64;osx-x64</RuntimeIdentifiers>
+    <RuntimeIdentifiers>win-x64;linux-x64;linux-arm64;osx-x64;osx-arm64</RuntimeIdentifiers>
     
     <!-- NuGet Package Properties -->
     <PackageId>CycoGr</PackageId>
