Improve cycodj list and journal output clarity
- list: Show 1 message preview for quick scanning
- journal: Show 3 messages for narrative context
- journal --detailed: Add tool usage and file modification summaries
- Fix branch preview to show last messages instead of first (more useful)
- Remove redundant Summary line from journal detailed mode
- Add GetFilesModified() and HasFileModifications() to ContentSummarizer
- Add TODO for --instructions support similar to cycodmd/cycodgr

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ src/cycodmd/bin/
 src/cycodmd/obj/
 src/cycodt/obj/
 src/cycodt/bin/
+src/cycodgr/bin/
+src/cycodgr/obj/
+src/cycodj/bin/
+src/cycodj/obj/
 src/mcp/**/obj/
 src/mcp/**/bin/
 
@@ -31,5 +35,3 @@ obj/
 # Test cloned repos
 temp/external/
 temp/test-repos/
-src/cycodgr/bin/
-src/cycodgr/obj/
