fix: Remove RuntimeIdentifiers from .csproj to fix NuGet tool installation
The DotnetToolSettings.xml Version="2" format was preventing installation on
.NET SDK 9.0.306 (requires 9.0.400+). Removing RuntimeIdentifiers from the
.csproj files forces Version="1" format which is compatible with SDK 9.0.306.

Changes:
- Remove <RuntimeIdentifiers> property from all tool projects
- RuntimeIdentifiers are still specified via -r flag in publish-self-contained.sh
- NuGet packages now generate DotnetToolSettings.xml Version="1"
- Tools can now be installed with: dotnet tool install -g <tool> --version <version>

This fixes the issue introduced when the publish loop was removed from pack.sh
in PR #87. The simplified pack approach triggered Version="2" format because
dotnet pack saw RuntimeIdentifiers in the .csproj files.

Fixes installation error:
'The settings file in the tool's NuGet package is invalid: Format version is
higher than supported. This tool may not be supported in this SDK version.'

--- a/src/cycodgr/cycodgr.csproj
+++ b/src/cycodgr/cycodgr.csproj
@@ -12,8 +12,8 @@
     <OutputType>Exe</OutputType>
     
     <!-- Cross-platform support -->
-    <RuntimeIdentifiers>win-x64;linux-x64;osx-x64</RuntimeIdentifiers>
-    
+    <!-- RuntimeIdentifiers removed - specified on command line during publish -->
+        
     <!-- NuGet Package Properties -->
     <PackageId>CycoDgr</PackageId>
     <Authors>Rob Chambers</Authors>
