Robch/2512 dec20 chat journal (#90)
* Update CI and release workflows to target .NET 9.0 and enhance repo filtering logic

* Initial planning documents for cycodj (chat journal tool)

- chat-journal-plan.md: Full project plan and feature spec
- TODO.md: Investigation tasks and experiments to run
- findings.md: Initial analysis of JSONL file structure and branching
- architecture.md: Detailed technical architecture and design
- README.md: Updated with project purpose and status

* Add branching visualization examples and algorithm details

* Add quick-start implementation guide with day-by-day tasks

* Add comprehensive summary of planning work

* Add infrastructure guide based on cycodgr analysis

Research how cycodgr was added (commit 14169d53) and document:

- Complete checklist for adding new CLI tools
- Project file (.csproj) template with all required settings
- Solution file integration steps
- CI/CD workflow modifications needed
- Build script updates (scripts/_functions.sh)
- Program.cs and ProgramInfo patterns
- Common code patterns and helpers to use
- Naming conventions across the project
- Testing checklist

Updated existing docs to reference this infrastructure guide:
- quick-start.md: Added Phase 0 for project setup
- architecture.md: Note about infrastructure requirements
- chat-journal-plan.md: Added Phase 0 to roadmap
- SUMMARY.md: Highlighted infrastructure as first step

This ensures cycodj follows the same patterns as other tools.

* Add research summary of cycodgr investigation

Documents key findings from analyzing commit 14169d53:
- Files changed when adding cycodgr
- Critical infrastructure elements
- Code patterns to follow
- Naming conventions
- Common mistakes to avoid
- Complexity comparison (cycodgr vs simpler tools)
- References for cycodj implementation

Serves as quick reference alongside the detailed adding-new-cli-tool.md guide.

* Update README to highlight infrastructure guide

* Complete Phase 0: Project infrastructure setup for 

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ src/cycodmd/bin/
 src/cycodmd/obj/
 src/cycodt/obj/
 src/cycodt/bin/
+src/cycodgr/bin/
+src/cycodgr/obj/
+src/cycodj/bin/
+src/cycodj/obj/
 src/mcp/**/obj/
 src/mcp/**/bin/
 
@@ -26,10 +30,3 @@ tests/cycodt-yaml/inception-layer-1/test-results-simple.trx
 tests/cycodt-yaml/inception-layer-1/test-results-simple?.trx
 *.log
 .vscode/settings.json
-
-obj/
-# Test cloned repos
-temp/external/
-temp/test-repos/
-src/cycodgr/bin/
-src/cycodgr/obj/
